Update Server v0.0.2(addons)

--- a/BungeeSpider-Server/bungee.yml
+++ b/BungeeSpider-Server/bungee.yml
@@ -1,4 +1,4 @@
 name: BungeeSpider-Server
 main: net.wynsolutions.bss.BSSPluginLoader
-version: 0.0.1
-author: WYNGames
+version: 0.0.2
+author: Sw4p
