--- a/BungeeSpider-Server/pom.xml
+++ b/BungeeSpider-Server/pom.xml
@@ -56,6 +56,18 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+           <version>1.17</version>
+        </dependency>
+       	<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.16.12</version>
+		    <scope>provided</scope>
+	    </dependency> 
     </dependencies>
     
 </project>
